--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,70 +1,4 @@
 <div class="container">
-  <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
-    <input
-      type="text"
-      id="username"
-      placeholder="მომხმარებელი ან საიდენტიფიკაციო კოდი"
-      name="userName"
-      [(ngModel)]="userName"
-      #name="ngModel"
-      required
-    />
-    <span *ngIf="name.invalid && (name.dirty || name.touched)">
-      მომხმარებლის ველის შევსება აუცილებელია</span
-    >
-    <input
-      type="password"
-      placeholder="პაროლი"
-      name="userPassword"
-      required
-      [(ngModel)]="userPassword"
-      #password="ngModel"
-      minlength="6"
-    />
-    <span *ngIf="password.invalid && (password.dirty || password.touched)"
-      >პაროლში სიმბოლოების რაოდენობა უნდა აღემატებოდეს 5-ს</span
-    >
-    <input
-      type="submit"
-      class="submit"
-      value="ავტორიზაცია"
-      [disabled]="userForm.invalid"
-      [ngStyle]="{ backgroundColor: userForm.invalid ? 'lightblue' : '' }"
-    />
-    <input
-      class="submit"
-      value="ავტორიზებული სიის ნახვა"
-      (click)="onUsersFetch()"
-    />
-  </form>
-</div>
-
-<div
-  *ngIf="allUsers.length < 1 && !isLoading"
-  [ngStyle]="{ textAlign: 'center' }"
->
-  <p [ngStyle]="{ marginTop: '20px' }">
-    არ არის არცერთი ავტორიზებული მომხმარებელი
-  </p>
-</div>
-
-<div *ngIf="errorMessage !== null" [ngStyle]="{ textAlign: 'center' }">
-  <h1>{{ errorMessage }}}}</h1>
-</div>
-<div *ngIf="isLoading && !errorMessage" [ngStyle]="{ textAlign: 'center' }">
-  <h1>Loading ...</h1>
-</div>
-<div class="deleteAll">
-  <button *ngIf="allUsers.length !== 0" (click)="deleteall()">
-    <p>Clear All Users</p>
-  </button>
-</div>
-
-<div class="userstyle" *ngFor="let user of allUsers; index as i">
-  <div>
-    <p>{{ i + 1 }}. {{ user.userName }}</p>
-  </div>
-  <div>
-    <button (click)="deleteUser(user.id)">delete</button>
-  </div>
+  <h1>Hello {{ userName }}</h1>
+  <button (click)="onLogout()">Logout</button>
 </div>
