--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-user></app-user>
+<!-- <app-register-form></app-register-form> -->
+<!-- <app-login></app-login> -->
+<router-outlet></router-outlet>
