--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
       <span>მოცემული ველის შევსება აუცილებელია</span>
     </div>
     <input
-      type="userPassword"
+      type="Password"
       placeholder="პაროლი"
       formControlName="userPassword"
       id="userPassword"
