--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -28,11 +28,7 @@
 
     <div>
       <label>პაროლი: </label>
-      <input
-        type="userPassword"
-        formControlName="userPassword"
-        id="userPassword"
-      />
+      <input type="password" formControlName="password" id="password" />
     </div>
 
     <div
