--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,3 +2,6 @@
   <h1>Hello {{ userName }}</h1>
   <button (click)="onLogout()">Logout</button>
 </div>
+<div class="cart">
+  <app-cart></app-cart>
+</div>
