--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-register-form></app-register-form> -->
 <!-- <app-login></app-login> -->
 <router-outlet></router-outlet>
+<!-- <app-cart></app-cart> -->
