--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,57 +1,106 @@
 .container {
   box-shadow: 4px 5px 6px rgb(218, 217, 217);
-  width: 600px;
-  height: 500px;
-  margin: 0 auto;
+  width: 60%;
+  height: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background-color: white;
-  margin-top: 40px;
+  background-color: rgba(255, 255, 255, 1);
 }
 
-.container {
-  box-shadow: 4px 5px 6px rgb(218, 217, 217);
-  width: 600px;
-  height: 500px;
-  margin: 0 auto;
+.rectangle2 {
+  width: 40%;
+  background-color: rgba(243, 249, 255, 1);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+h1 {
+  color: rgba(13, 102, 208, 1);
+  text-align: center;
+  font-size: 26px;
+  line-height: 31.38px;
+}
+.elipse {
+  background-color: rgba(13, 102, 208, 0.05);
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  position: relative;
+}
+.elipse2 {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: rgba(13, 102, 208, 0.2);
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h5 {
+  color: rgba(13, 102, 208, 1);
+  text-align: center;
+}
+
+.rectangle1 {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background-color: white;
-  margin-top: 40px;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
 }
+
 form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 10px;
-  align-items: center;
-}
-
-h1 {
-  color: #3b76cc;
-  margin-bottom: 19px;
-  text-align: center;
 }
 
 input {
   border-style: none;
-  border: 1px solid rgba(156, 145, 145, 0.42);
-  width: 400px;
-  height: 50px;
+  border-bottom: 1px solid rgba(156, 145, 145, 0.42);
+  width: 485px;
+  height: 30px;
   padding: 5px;
   font-size: 15px;
   text-align: center;
 }
+
+label {
+  margin-top: 10px;
+}
 .submit {
-  width: 400px;
+  width: 151px;
   height: 50px;
   background-color: #3b76cc;
   color: white;
   font-size: 1rem;
   border-style: none;
+  border-radius: 10px;
   cursor: pointer;
+  margin-top: 22px;
+}
+
+.input-container {
+  width: 100%;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
 }
 .userstyle {
   width: 600px;
