--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -1,7 +1,6 @@
 .container {
   box-shadow: 4px 5px 6px rgb(218, 217, 217);
-  width: 600px;
-  height: 500px;
+  width: 300px;
   margin: 0 auto;
   display: flex;
   gap: 30px;
@@ -9,6 +8,7 @@
   flex-direction: column;
   background-color: white;
   margin-top: 40px;
+  margin-bottom: 30px;
   align-items: center;
 }
 
